cloud-formation/nested-stack-with-single-file/vpc,subnet,igw,route,nat,ec2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: VPC with Public and Private Subnets, Internet Gateway, NAT Gateway, and EC2 instances public and private 

Resources:
  zeeshanVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 192.168.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: MyVPC

  zeePublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref zeeshanVPC
      CidrBlock: 192.168.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: PublicSubnet

  zeePrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref zeeshanVPC
      CidrBlock: 192.168.2.0/24
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
        - Key: Name
          Value: PrivateSubnet

  zeeInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: MyInternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref zeeshanVPC
      InternetGatewayId: !Ref zeeInternetGateway

  zeePublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref zeeshanVPC
      Tags:
        - Key: Name
          Value: PublicRouteTable

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref zeePublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref zeeInternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref zeePublicSubnet
      RouteTableId: !Ref zeePublicRouteTable

  ElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  zeeNatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt ElasticIP.AllocationId
      SubnetId: !Ref zeePublicSubnet

  zeePrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref zeeshanVPC
      Tags:
        - Key: Name
          Value: PrivateRouteTable

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref zeePrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref zeeNatGateway

  PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref zeePrivateSubnet
      RouteTableId: !Ref zeePrivateRouteTable
  
  
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref zeeshanVPC
      GroupDescription: Enable SSH and HTTP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0    
  
  NewKeyPair:
    Type: 'AWS::EC2::KeyPair'
    Properties:
      KeyName: zeeshan-wordpress-key.pem
  
  PublicInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: zeeshan-wordpress-key.pem  # Replace with your key pair name
      SubnetId: !Ref zeePublicSubnet
      ImageId: ami-09040d770ffe2224f  # Replace with the AMI ID you want to use
      Tags:
        - Key: Name
          Value: PublicInstance


  PrivateInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: zeeshan-wordpress-key.pem  # Replace with your key pair name
      SubnetId: !Ref zeePrivateSubnet
      ImageId: ami-09040d770ffe2224f  # Replace with the AMI ID you want to use
      Tags:
        - Key: Name
          Value: PrivateInstance    
Outputs:
  BucketName:
    Value: !Ref 'zeeshanVPC'
    Description: Name of the sample Amazon VPC .
